// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Topbar > collapses to icon-only chrome when focus=1 1`] = `
<div>
  <header
    class="flex h-10 shrink-0 items-center gap-2 border-b border-rule bg-paper px-3 md:gap-4 md:px-4"
  >
    <button
      aria-label="Open navigation"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3 hover:bg-paper-2 hover:text-ink md:hidden"
      type="button"
    >
      <svg
        class="lucide lucide-menu h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="4"
          x2="20"
          y1="12"
          y2="12"
        />
        <line
          x1="4"
          x2="20"
          y1="6"
          y2="6"
        />
        <line
          x1="4"
          x2="20"
          y1="18"
          y2="18"
        />
      </svg>
    </button>
    <div
      class="flex items-center gap-1 font-mono text-[11px] uppercase tracking-wider text-ink-3"
    >
      <button
        class="cursor-text text-ink hover:text-ink"
        title="Rename doc (double-click)"
        type="button"
      >
        Sample
      </button>
    </div>
    <div
      class="flex-1"
    />
    <nav
      class="inline-flex items-center font-mono text-[11px] gap-1"
    >
      <a
        aria-current="page"
        aria-label="write"
        class="inline-flex h-7 w-7 items-center justify-center rounded-md transition-colors text-ink"
        data-discover="true"
        data-state="closed"
        href="/s/s1/d/d1?focus=1"
      >
        <svg
          class="lucide lucide-pencil h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
      </a>
      <a
        aria-label="read"
        class="inline-flex h-7 w-7 items-center justify-center rounded-md transition-colors text-ink-4 hover:bg-paper-2 hover:text-ink-2"
        data-discover="true"
        data-state="closed"
        href="/s/s1/d/d1/read?focus=1"
      >
        <svg
          class="lucide lucide-book-open h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 7v14"
          />
          <path
            d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
          />
        </svg>
      </a>
      <a
        aria-label="split"
        class="h-7 w-7 items-center justify-center rounded-md transition-colors text-ink-4 hover:bg-paper-2 hover:text-ink-2 hidden md:inline-flex"
        data-discover="true"
        data-state="closed"
        href="/s/s1/d/d1/split?focus=1"
      >
        <svg
          class="lucide lucide-columns2 h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M12 3v18"
          />
        </svg>
      </a>
      <a
        aria-label="space"
        class="inline-flex h-7 w-7 items-center justify-center rounded-md transition-colors text-ink-4 hover:bg-paper-2 hover:text-ink-2"
        data-discover="true"
        data-state="closed"
        href="/s/s1/dump?focus=1"
      >
        <svg
          class="lucide lucide-network h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="6"
            rx="1"
            width="6"
            x="16"
            y="16"
          />
          <rect
            height="6"
            rx="1"
            width="6"
            x="2"
            y="16"
          />
          <rect
            height="6"
            rx="1"
            width="6"
            x="9"
            y="2"
          />
          <path
            d="M5 16v-3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3"
          />
          <path
            d="M12 12V8"
          />
        </svg>
      </a>
    </nav>
    <button
      aria-label="Citations"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3 hover:bg-paper-2 hover:text-ink"
      data-state="closed"
      type="button"
    >
      <svg
        class="lucide lucide-quote h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
        <path
          d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
      </svg>
    </button>
    <a
      aria-label="Exit focus mode"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3 hover:bg-paper-2 hover:text-ink"
      data-discover="true"
      data-state="closed"
      href="/s/s1/d/d1"
    >
      <svg
        class="lucide lucide-minimize2 h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="4 14 10 14 10 20"
        />
        <polyline
          points="20 10 14 10 14 4"
        />
        <line
          x1="14"
          x2="21"
          y1="10"
          y2="3"
        />
        <line
          x1="3"
          x2="10"
          y1="21"
          y2="14"
        />
      </svg>
    </a>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Theme"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3 hover:bg-paper-2 hover:text-ink focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink"
      data-state="closed"
      id="radix-:rg:"
      title="Theme"
      type="button"
    >
      <svg
        class="lucide lucide-sun h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="4"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M12 20v2"
        />
        <path
          d="m4.93 4.93 1.41 1.41"
        />
        <path
          d="m17.66 17.66 1.41 1.41"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="M20 12h2"
        />
        <path
          d="m6.34 17.66-1.41 1.41"
        />
        <path
          d="m19.07 4.93-1.41 1.41"
        />
      </svg>
    </button>
  </header>
</div>
`;

exports[`Topbar > renders citations view (no mode tabs, no focus toggle) 1`] = `
<div>
  <header
    class="flex h-10 shrink-0 items-center gap-2 border-b border-rule bg-paper px-3 md:gap-4 md:px-4"
  >
    <button
      aria-label="Open navigation"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3 hover:bg-paper-2 hover:text-ink md:hidden"
      type="button"
    >
      <svg
        class="lucide lucide-menu h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="4"
          x2="20"
          y1="12"
          y2="12"
        />
        <line
          x1="4"
          x2="20"
          y1="6"
          y2="6"
        />
        <line
          x1="4"
          x2="20"
          y1="18"
          y2="18"
        />
      </svg>
    </button>
    <div
      class="flex items-center gap-1 font-mono text-[11px] uppercase tracking-wider text-ink-3"
    >
      <span
        class="hidden md:inline"
      >
        Test
      </span>
    </div>
    <div
      class="flex-1"
    />
    <a
      aria-label="Citations"
      class="inline-flex items-center gap-1.5 rounded-md px-2 py-1 font-mono text-[10px] uppercase tracking-wider text-ink hover:bg-paper-2"
      data-discover="true"
      href="/s/s1/citations"
    >
      <svg
        class="lucide lucide-quote h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
        <path
          d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
      </svg>
      <span
        class="hidden sm:inline"
      >
        Citations
      </span>
    </a>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Theme"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3 hover:bg-paper-2 hover:text-ink focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink"
      data-state="closed"
      id="radix-:r5:"
      title="Theme"
      type="button"
    >
      <svg
        class="lucide lucide-sun h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="4"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M12 20v2"
        />
        <path
          d="m4.93 4.93 1.41 1.41"
        />
        <path
          d="m17.66 17.66 1.41 1.41"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="M20 12h2"
        />
        <path
          d="m6.34 17.66-1.41 1.41"
        />
        <path
          d="m19.07 4.93-1.41 1.41"
        />
      </svg>
    </button>
  </header>
</div>
`;

exports[`Topbar > renders with doc name, mode tabs and theme toggle 1`] = `
<div>
  <header
    class="flex h-10 shrink-0 items-center gap-2 border-b border-rule bg-paper px-3 md:gap-4 md:px-4"
  >
    <button
      aria-label="Open navigation"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3 hover:bg-paper-2 hover:text-ink md:hidden"
      type="button"
    >
      <svg
        class="lucide lucide-menu h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="4"
          x2="20"
          y1="12"
          y2="12"
        />
        <line
          x1="4"
          x2="20"
          y1="6"
          y2="6"
        />
        <line
          x1="4"
          x2="20"
          y1="18"
          y2="18"
        />
      </svg>
    </button>
    <div
      class="flex items-center gap-1 font-mono text-[11px] uppercase tracking-wider text-ink-3"
    >
      <span
        class="hidden md:inline"
      >
        Test
      </span>
      <span
        class="hidden text-ink-4 md:inline"
      >
        /
      </span>
      <button
        class="cursor-text text-ink hover:text-ink"
        title="Rename doc (double-click)"
        type="button"
      >
        Sample
      </button>
    </div>
    <div
      class="flex-1"
    />
    <nav
      class="inline-flex items-center font-mono text-[11px] gap-4"
    >
      <a
        class="pb-0.5 transition-colors border-b border-ink font-medium text-ink"
        data-discover="true"
        href="/s/s1/d/d1"
      >
        write
      </a>
      <a
        class="pb-0.5 transition-colors text-ink-4 hover:text-ink-2"
        data-discover="true"
        href="/s/s1/d/d1/read"
      >
        read
      </a>
      <a
        class="pb-0.5 transition-colors text-ink-4 hover:text-ink-2 hidden md:inline"
        data-discover="true"
        href="/s/s1/d/d1/split"
      >
        split
      </a>
      <a
        class="pb-0.5 transition-colors text-ink-4 hover:text-ink-2"
        data-discover="true"
        href="/s/s1/dump"
      >
        space
      </a>
    </nav>
    <button
      aria-label="Citations"
      class="inline-flex items-center gap-1.5 rounded-md px-2 py-1 font-mono text-[10px] uppercase tracking-wider text-ink-3 hover:bg-paper-2 hover:text-ink"
      type="button"
    >
      <svg
        class="lucide lucide-quote h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
        <path
          d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
      </svg>
      <span
        class="hidden sm:inline"
      >
        Citations
      </span>
    </button>
    <a
      aria-label="Enter focus mode"
      class="inline-flex items-center gap-1.5 rounded-md px-2 py-1 font-mono text-[10px] uppercase tracking-wider text-ink-3 hover:bg-paper-2 hover:text-ink"
      data-discover="true"
      href="/s/s1/d/d1?focus=1"
      title="Focus (⌘\\)"
    >
      <svg
        class="lucide lucide-maximize2 h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="15 3 21 3 21 9"
        />
        <polyline
          points="9 21 3 21 3 15"
        />
        <line
          x1="21"
          x2="14"
          y1="3"
          y2="10"
        />
        <line
          x1="3"
          x2="10"
          y1="21"
          y2="14"
        />
      </svg>
      FOCUS
    </a>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Theme"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3 hover:bg-paper-2 hover:text-ink focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink"
      data-state="closed"
      id="radix-:r0:"
      title="Theme"
      type="button"
    >
      <svg
        class="lucide lucide-sun h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="4"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M12 20v2"
        />
        <path
          d="m4.93 4.93 1.41 1.41"
        />
        <path
          d="m17.66 17.66 1.41 1.41"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="M20 12h2"
        />
        <path
          d="m6.34 17.66-1.41 1.41"
        />
        <path
          d="m19.07 4.93-1.41 1.41"
        />
      </svg>
    </button>
  </header>
</div>
`;
